# aoc-fetch-inputs

./: Cargo.toml
src/: main.rs
