[package]
name = "fetch-inputs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
eyre = "0.6.9"
home = "0.5.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
rusqlite = "0.30.0"
